<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_service_label">Notification component</string>
    <string name="addComponent">Add Component</string>
    <string name="airplane_mode_tip">Network data cannot be turned on in airplane mode</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="appNotAuthor">Not authorized yet, please try again later</string>
    <string name="app_manager_disabled">This function has been banned</string>
    <string name="app_name">Launcher</string>
    <string name="app_style">Style</string>
    <string name="app_theme">Theme</string>
    <string name="app_wallpaper">Wallpaper</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="authoring">Authorizing...</string>
    <string name="authoring_fail">Authorization failed</string>
    <string name="authoring_success">Authorization successful</string>
    <string name="average">Average</string>
    <string name="bloodoxygen">Blood Oxygen</string>
    <string name="bloodoxygenIndroduce" formatted="false">Blood oxygen saturation（SpO2），also known as oxygen saturation，is a measure of the partial pressure of oxygen in the blood，Usually expressed as a percentage (%)。Oxygen saturation is used to assess the amount of oxygen in the blood，Reflects how much red blood cells in the blood are oxygenated by oxygen molecules。Normal blood oxygen saturation is usually between 95% and 100% at rest，under certain circumstances，such as high altitudes, people with respiratory or cardiovascular disease，Normal range may vary slightly。</string>
    <string name="bloodoxygenTips">Blood Oxygen Tips</string>
    <string name="bloodpressure">Blood Pressure</string>
    <string name="bloodpressureIndroduce">Blood pressure is used to measure the pressure exerted by the heart on the arterial wall during contraction and relaxation. The ideal blood pressure is usually below 120/80 mmHg. Exceeding this range may increase the risk of cardiovascular disease. Below the normal range may cause fatigue and dizziness. Regular measurement and maintenance of a healthy lifestyle are crucial for maintaining normal blood pressure</string>
    <string name="bloodpressureTips">Tip</string>
    <string name="bluetooth_open">Bluetooth starting</string>
    <string name="bottom_no_notification">No notification</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bpm">bpm</string>
    <string name="breathe">Breathe</string>
    <string name="breatheChugan">Breathing Sensation</string>
    <string name="breatheDuraion">Breathing Duration</string>
    <string name="breathePinlv">Breathing Rate</string>
    <string name="brvah_load_complete">点击加载更多</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="bubble_activity_title">Watch face effects</string>
    <string name="bubble_enable_label">After turning it on, you can click anywhere on the watch face interface to see a colorful bubble effect</string>
    <string name="bubble_switch_title">Watch face bubble effects</string>
    <string name="calories">Calories</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="charge_finish">Fully charged</string>
    <string name="charge_forbidden_mode">No use during charging</string>
    <string name="charge_mode">Charging</string>
    <string name="china_broad_network">China Broadcasting Network</string>
    <string name="china_mobile">China Mobile</string>
    <string name="china_telecom">China Telecom</string>
    <string name="china_television">China Unicom</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clock_container_first_tip">No more dials</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_set_wallpaper_both">Both</string>
    <string name="confirm_set_wallpaper_desktop">Home screen</string>
    <string name="confirm_set_wallpaper_keyguard">Lock screen</string>
    <string name="connectNetAuthor">Please connect to the Internet for authorization</string>
    <string name="dashboard_style_name_bubble">Honeycomb</string>
    <string name="dashboard_style_name_cyclic">Circle</string>
    <string name="dashboard_style_name_grid">3x3</string>
    <string name="dashboard_style_name_grid2">2x2</string>
    <string name="dashboard_style_name_grid2_vertical">2x2</string>
    <string name="dashboard_style_name_grid5_vertical">7x1</string>
    <string name="dashboard_style_name_grid_vertical">3x3</string>
    <string name="dashboard_style_name_half_cyclic">Wheel</string>
    <string name="dashboard_style_name_honeycomb">Honeycomb2</string>
    <string name="dashboard_style_name_linear">List</string>
    <string name="default_wallpaper">wallpapers/main_theme_bg.png</string>
    <string name="define_roundedimageview" />
    <string name="delete">Delete</string>
    <string name="endSleep">Wake Up</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exhale">Exhale</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fri">Friday</string>
    <string name="friday">Fri</string>
    <string name="heart">Heart Rate</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="high_knees">High Knees</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="incoming">called</string>
    <string name="inhale">Inhale</string>
    <string name="ios_menu_type_cell">Grid view</string>
    <string name="ios_menu_type_list">List view</string>
    <string name="item_view_role_description">Tab</string>
    <string name="jianzi">Jianzi</string>
    <string name="jump_rope">Jump Rope</string>
    <string name="keepOne">Keep at least one</string>
    <string name="leak">Weak</string>
    <string name="library_roundedimageview_author">Vince Mi</string>
    <string name="library_roundedimageview_authorWebsite">https://github.com/vinc3m1</string>
    <string name="library_roundedimageview_isOpenSource">true</string>
    <string name="library_roundedimageview_libraryDescription">A fast ImageView (and Drawable) that supports rounded corners (and ovals or circles) based on the original example from Romain Guy.</string>
    <string name="library_roundedimageview_libraryName">RoundedImageView</string>
    <string name="library_roundedimageview_libraryVersion">1.3.0</string>
    <string name="library_roundedimageview_libraryWebsite">https://github.com/vinc3m1/RoundedImageView</string>
    <string name="library_roundedimageview_licenseId">apache_2_0</string>
    <string name="library_roundedimageview_repositoryLink">https://github.com/vinc3m1/RoundedImageView.git</string>
    <string name="low_bat_mode">Low Power MODE</string>
    <string name="low_mode_not_support">"This feature is not supported 
in low power mode"</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">"%1$s o'clock"</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="material_timepicker_minute">Minute</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="material_timepicker_select_time">Select time</string>
    <string name="material_timepicker_text_input_mode_description">Switch to text input mode for the time input.</string>
    <string name="measure_end">Measured ended</string>
    <string name="measuring">Measuring</string>
    <string name="menu_item_shortcut">Menu item shortcut</string>
    <string name="message">Message</string>
    <string name="minitue">Minute</string>
    <string name="not_measure">Not Measured</string>
    <string name="selectPhoto">Select Photo</string>
    <string name="sportDistance">Sport Distance</string>
    <string name="step">Steps</string>
    <string name="stepWeekTotal">Step Count Statistics This Week</string>
    <string name="steps">Steps</string>
    <string name="targetStep_">Target Steps:</string>
    <string name="tip">Please wear the watch properly</string>
</resources>