<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" app:divider="@color/white" app:showDividers="middle"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:gravity="center" android:id="@id/confirm_set_wallpaper_keyguard" android:paddingTop="8.0dp" android:paddingBottom="8.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/confirm_set_wallpaper_keyguard" />
    <TextView android:gravity="center" android:id="@id/confirm_set_wallpaper_desktop" android:paddingTop="8.0dp" android:paddingBottom="8.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/confirm_set_wallpaper_desktop" />
    <TextView android:gravity="center" android:id="@id/confirm_set_wallpaper_both" android:paddingTop="8.0dp" android:paddingBottom="8.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/confirm_set_wallpaper_both" />
</androidx.appcompat.widget.LinearLayoutCompat>
