<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="30.0sp" android:id="@id/txtSelect" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dp" android:text="@string/selectPhoto" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <androidx.recyclerview.widget.RecyclerView android:id="@id/recyclerView" android:layout_width="0.0dp" android:layout_height="0.0dp" android:layout_marginTop="2.0dp" android:layout_marginStart="1.0dp" android:layout_marginEnd="1.0dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/txtSelect" />
    <RelativeLayout android:id="@id/rlPhoto" android:visibility="gone" android:layout_width="0.0dp" android:layout_height="0.0dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <ImageView android:id="@id/backGround" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent" android:scaleType="fitXY" />
        <TextView android:textSize="25.0sp" android:gravity="center" android:id="@id/txtCancel" android:background="@drawable/photo_cancel" android:layout_width="120.0dp" android:layout_height="120.0dp" android:text="@string/cancel" android:layout_centerVertical="true" android:layout_marginStart="30.0dp" />
        <TextView android:textSize="25.0sp" android:gravity="center" android:id="@id/txtConfirm" android:background="@drawable/photo_selected" android:layout_width="120.0dp" android:layout_height="120.0dp" android:text="@string/confirm" android:layout_centerVertical="true" android:layout_marginEnd="30.0dp" android:layout_alignParentEnd="true" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
