<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@color/black" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:apps="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <RelativeLayout android:layout_width="match_parent" android:layout_height="@dimen/top_title_height" android:layout_marginTop="5.0dp">
            <com.dw.oxygen.MarqueeTextView android:textSize="@dimen/title_text_size" android:textColor="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/titleBarMarginStart" android:text="@string/heart" android:layout_centerVertical="true" android:layout_toStartOf="@id/top_clock" />
            <TextClock android:textSize="@dimen/title_text_size" android:id="@id/top_clock" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginEnd="@dimen/titleBarMarginEnd" android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <com.dw.launcher.ui.view.HeartBarChart android:id="@id/heartChart" android:layout_width="match_parent" android:layout_height="125.0dp" android:layout_marginTop="30.0dp" android:layout_marginStart="25.0dp" android:layout_marginEnd="25.0dp" apps:bar_background_color="#301111" apps:bar_color="#ff2828" apps:slide_line_color="#720c0c" apps:slide_text_color="@color/white" />
        <TextView android:textSize="20.0sp" android:textColor="@color/color666" android:id="@id/txtStatus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:text="@string/not_measure" android:layout_marginStart="10.0dp" />
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginStart="20.0dp" android:layout_marginEnd="20.0dp">
            <ImageView android:layout_gravity="center_vertical" android:id="@id/ivAnim" android:background="@drawable/heart_measure" android:layout_width="56.0dp" android:layout_height="56.0dp" android:layout_centerVertical="true" android:layout_marginStart="20.0dp" />
            <LinearLayout android:orientation="horizontal" android:id="@id/llvalue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true">
                <TextView android:textSize="35.0sp" android:textColor="@color/white" android:id="@id/txtHeart" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="--" android:layout_marginStart="12.0dp" />
                <TextView android:textSize="25.0sp" android:textColor="@color/color666" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bpm" android:layout_marginStart="5.0dp" />
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_centerVertical="true">
            <TextView android:textSize="20.0sp" android:textColor="@color/white" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/average" android:layout_marginStart="12.0dp" />
            <TextView android:textSize="20.0sp" android:textColor="@color/white" android:id="@id/txtAvgHeart" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="--" android:includeFontPadding="false" android:layout_marginStart="12.0dp" />
            <TextView android:textSize="16.0sp" android:textColor="@color/color666" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bpm" android:layout_marginStart="5.0dp" />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout android:id="@id/wrist_status" android:background="@color/black" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/tip" />
            <TextView android:textSize="22.0sp" android:textColor="@color/white" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tip" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
