<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/black" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="@dimen/top_title_height">
        <TextView android:textSize="@dimen/title_text_size" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/titleBarMarginStart" android:text="@string/breathe" android:layout_centerVertical="true" />
        <TextClock android:textSize="@dimen/title_text_size" android:id="@id/top_clock" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginEnd="@dimen/titleBarMarginEnd" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/llPinlvSetting" android:background="@drawable/breathe_item_bg" android:layout_width="match_parent" android:layout_height="75.0dp" android:layout_marginStart="5.0dp" android:layout_marginEnd="5.0dp">
        <ImageView android:background="@mipmap/breathe_pinlv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="15.0dp" />
        <TextView android:textSize="24.0sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/breathePinlv" android:layout_marginStart="15.0dp" />
        <RelativeLayout android:gravity="right|center" android:layout_width="match_parent" android:layout_height="match_parent">
            <ImageView android:layout_gravity="right|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/white_arrow" android:layout_marginEnd="15.0dp" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/llDuraionSetting" android:background="@drawable/breathe_item_bg" android:layout_width="match_parent" android:layout_height="75.0dp" android:layout_marginTop="20.0dp" android:layout_marginStart="5.0dp" android:layout_marginEnd="5.0dp">
        <ImageView android:background="@mipmap/breathe_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="15.0dp" />
        <TextView android:textSize="24.0sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/breatheDuraion" android:layout_marginStart="15.0dp" />
        <RelativeLayout android:gravity="right|center" android:layout_width="match_parent" android:layout_height="match_parent">
            <ImageView android:layout_gravity="right|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/white_arrow" android:layout_marginEnd="15.0dp" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/llChuganSetting" android:background="@drawable/breathe_item_bg" android:layout_width="match_parent" android:layout_height="75.0dp" android:layout_marginTop="20.0dp" android:layout_marginStart="5.0dp" android:layout_marginEnd="5.0dp">
        <ImageView android:background="@mipmap/breathe_chugan" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="15.0dp" />
        <TextView android:textSize="24.0sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/breatheChugan" android:layout_marginStart="15.0dp" />
        <RelativeLayout android:gravity="right|center" android:layout_width="match_parent" android:layout_height="match_parent">
            <ImageView android:layout_gravity="right|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/white_arrow" android:layout_marginEnd="15.0dp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
